--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dancing Creatures</title>
+    <meta name="description" content="Dancing Creatures - An interactive web app that transforms your movements into animated characters using TensorFlow.js and pose detection." />
   </head>
   <body>
     <div id="root"></div>
